# best-pathtracer-ever

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_and_run.cmd  main.cpp
.github/workflows/: cmake.yml
